# sdl3_breakout

./: CMakeLists.txt  Makefile  README.md  ball.c  ball.h  bricks.c  bricks.h  collision.c  collision.h  common.h  events.c  events.h  gameplay.c  gameplay.h  gfx.c  gfx.h  main.c  main.h  paddle.c  paddle.h  particles.c  particles.h  sfx.c  sfx.h  textures.c  textures.h
